--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,3 +35,10 @@
   <h1>Welcome to Angular</h1>
   <h2>Hello</h2>
 </div>
+
+<div>
+  <app-dashboard></app-dashboard>
+</div>
+<div>
+  <app-about></app-about>
+</div>
